recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: reassignment to val
		steps=steps-1;
                     ^Spiral:5: error: not found: value lenght
		lenght=lenght+3;
                ^Spiral:6: error: not found: value lenght
		avance(lenght);
                       ^