recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if (steps!=0) {
		steps=steps-1;
		lenght=lenght+3;
		avance(lenght);
		gauche(angle)
	}
}

